Changelog for ghcid (* = breaking change)

0.8.7, released 2020-06-06
    #319, allow eval multiline commands
0.8.6, released 2020-04-13
    #314, report GHC panics as error messages
0.8.5, released 2020-03-19
    #311, allow --target with Stack
0.8.4, released 2020-03-15
    #309, use cabal repl --repl-options to avoid errors
0.8.3, released 2020-03-10
    #306, fix --target to work on exe: targets
0.8.2, released 2020-03-08
    #302, --target option for specifying targets for cabal repl
    #300, restart on file changes detected by --restart=dir/
0.8.1, released 2020-01-09
    #293, passing --allow-eval should disable -fno-code by default
    #291, try and be more robust to mucking with the console
0.8, released 2019-12-04
*   Add an extra field to GhciError
    #288, include the last line of stderr in shutdown messages
0.7.7, released 2019-11-24
    #287, only lint reloaded files
0.7.6, released 2019-10-13
    #283, support Clashi
    #278, allow --lint to take a shell command rather than just an executable
    #275, fix error reporting with non .hs/.lhs filenames in LINE pragmas
0.7.5, released 2019-07-04
    #263, fix not resizing on terminal resize
    #262, add --test-message flag
    #253, try and keep the cursor visible after Ctrl-C
    #248, add --allow-eval flag to evaluate code snippets
    #245, link with -rtsopts to be able to use RTS flags
0.7.4, released 2019-04-17
    #237, ability to cope better with large error messages
    #237, add --clear, --no-height-limit, --reverse-errors
0.7.3, released 2019-04-15
    #236, add hlint support, pass --lint
0.7.2, released 2019-03-12
    #225, allow watching directories for new files
    #226, fix the polling behaviour
    #224, print out overly long files without line breaks
    #202, make --verbose print out version, arch, os
0.7.1, released 2018-09-07
    #190, load benchmarks as well as tests when using stack
    #171, support GHCJSi
    #163, allow --run, like --test but defaults to main