@@ -201,10 +201,10 @@ handleErrors = handle $ \(UnexpectedExit cmd _ mmsg) -> do
         Nothing -> ""
     exitFailure
 
-finallyPrintStopped :: Options -> IO () -> IO ()
-finallyPrintStopped opts x = x `finally` do
-        outputfile opts `forM_` \file -> do
-            writeFile file "ghcid has stopped\n"
+printStopped :: Options -> IO ()
+printStopped opts =
+    forM_ (outputfile opts) $ \file -> do
+        writeFile file "Ghcid has stopped.\n"
 
 
 -- | Like 'main', but run with a fake terminal for testing
@@ -217,11 +217,7 @@ mainWithTerminal termSize termOutput = do
         outStrLn $ "%VERSION: " ++ showVersion version
         args <- getArgs
         outStrLn $ "%ARGUMENTS: " ++ show args
-    mainWithTerminalWithOpts termSize termOutput opts
-
-mainWithTerminalWithOpts :: IO TermSize -> ([String] -> IO ()) -> Options -> IO ()
-mainWithTerminalWithOpts termSize termOutput opts = do
-    finallyPrintStopped opts $ handleErrors $
+    flip finally (printStopped opts) $ handleErrors $
         forever $ withWindowIcon $ withSession $ \session -> do
             setVerbosity Normal -- undo any --verbose flags
 
